# phase2

./: GDPO.py  README.md  chat_viewer.py  config.yaml  dataset.py  inference.py  loss.py  masking.py  model.py  model_loader.py  model_saver.py  pyproject.toml  rlhf_collect.py  tokenizer_patch.py  training.py  training_logger.py
architectures/: __init__.py  ministral_3_3b_instruct.py  ministral_3_3b_instruct_heteroscedastic_uncertainty.py  ministral_3_3b_instruct_mHC.py  ministral_3_3b_reasoning.py  ministral_3_3b_reasoning_agent.py
data/: sample_agent_test_data.json  smoke_long_332.json  train_biological_causality_1000.csv  train_biological_causality_1000.json  train_biological_causality_1000_no_pharma.csv  train_biological_causality_1000_no_pharma.json  train_biological_causality_1000_no_rare_disease_no_screen_gene_no_pharma.csv  train_biological_causality_1000_no_rare_disease_no_screen_gene_no_pharma.json
data_formatting/: convert_fsdp_checkpoint.py  format_agent_data.py
data_loaders/: __init__.py  agent_dataset.py  dummy_dataset.py  instruction_dataset.py
inference_ui/: ADDING_NODES.md  README.md  app.js  index.html  node-graph.css  node-graph.js  style.css
prompts/: ANALYZE_PLAN_PROMPT.txt  BIO_TOOLS_PROMPT.txt  CODE_GEN_PROMPT.txt  PLAN_SYSTEM_PROMPT.txt  TOOL_ROUTER_PROMPT.txt
result/: router_prompt_comparison_20260203_024244.csv  router_prompt_summary_20260203_024244.csv
tests/: __init__.py  test_gdpo.py  test_router_comprehensive.py  test_router_system_format.py  test_tool_router_e2e.py
tools/: __init__.py  base.py  executor.py  tool_router.py
(+33 files in other folders)
