[project]
name = "aigen"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers==5.0.0",
    "torch==2.6.0",
    "accelerate==1.12.0",
    "datasets==4.5.0",
    "safetensors==0.7.0",
    "huggingface_hub==1.3.4",
    "hf_xet==1.2.0",
    "mistral-common==1.8.8",
    "pandas==3.0.0",
    "pick==2.4.0",
    "matplotlib==3.10.8",
    "scikit-learn==1.8.0",
    "peft>=0.11.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
